--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 # 服务器端口
 server.port=8080
 
-# MySQL 数据源配置
-spring.datasource.url=jdbc:mysql://localhost:3306/car_fee_system?useSSL=false&serverTimezone=Asia/Shanghai
+# MySQL 数据源配置（关键是 allowPublicKeyRetrieval=true）
+spring.datasource.url=jdbc:mysql://localhost:3306/car_fee_system\
+?useSSL=false\
+&serverTimezone=Asia/Shanghai\
+&allowPublicKeyRetrieval=true
+
 spring.datasource.username=root
 spring.datasource.password=041234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 显示 SQL（方便调试）
+# JDBC 调试（建议打开，方便看 SQL）
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
