增加车牌识别功能功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
+# 百度 OCR 配置
+baidu.ocr.app-id=7331859
+baidu.ocr.api-key=Vz61UHottPkRzzGxyDYsFEZ5
+baidu.ocr.secret-key=M2WvfSIkIh5HBrGDzWYHYRMl5cQmxuVs
