添加二维码支付功能

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
+		<!-- ⭐ 新增：二维码生成 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+
 
 	</dependencies>
 
